projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Correlation_Id__c</fullName>
    <label>QB Correlation Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>