projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>QB_Error_Code__c</fullName>
    <label>QB Error Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>