projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>QB_Error_Message__c</fullName>
    <label>QB Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>