projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_ID__c</fullName>
    <label>QB Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>