projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Last_Attempt__c.field-meta.xml
<CustomField>
    <fullName>QB_Last_Attempt__c</fullName>
    <label>QB Last Attempt</label>
    <type>DateTime</type>
</CustomField>