projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Amount__c</fullName>
    <label>QB Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>