projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Date__c</fullName>
    <label>QB Payment Date</label>
    <type>Date</type>
</CustomField>