projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Link__c</fullName>
    <label>QB Payment Link</label>
    <type>Url</type>
</CustomField>