projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Payment_Link_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Payment_Link_Status__c</fullName>
    <label>QB Payment Link Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>