projects/qbsf/force-app/main/default/objects/Opportunity/fields/QB_Skip_Reason__c.field-meta.xml
<CustomField>
    <fullName>QB_Skip_Reason__c</fullName>
    <label>QB Skip Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>