projects/qbsf/force-app/main/default/objects/Opportunity/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Поставщик для данной сделки</description>
    <inlineHelpText>Выберите поставщика. Только US поставщики синхронизируются с QuickBooks.</inlineHelpText>
    <label>Поставщик</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Supplier)</relationshipLabel>
    <relationshipName>Supplier_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>